--- a/docker/Makefile
+++ b/docker/Makefile
@@ -12,25 +12,39 @@ default:
 
 all: build_el6 build_el7 push_el6 push_el7
 
+clean:
+	@echo Removing all rpmbuilder images
+	docker rmi -f jsosic/rpmbuilder:el7ius docker.io/jsosic/rpmbuilder:el7ius
+	docker rmi -f jsosic/rpmbuilder:el7    docker.io/jsosic/rpmbuilder:el7
+	docker rmi -f jsosic/rpmbuilder:el6ius docker.io/jsosic/rpmbuilder:el6ius
+	docker rmi -f jsosic/rpmbuilder:el6    docker.io/jsosic/rpmbuilder:el6
+
 build_el6:
-	@echo Building el6 rpmbuilder containers
+	@echo Building el6 rpmbuilder images
 	docker build --pull --tag docker.io/jsosic/rpmbuilder:el6    rpmbuilder:el6
 	docker build --tag docker.io/jsosic/rpmbuilder:el6ius rpmbuilder:el6ius
 
 build_el7:
-	@echo Building el7 rpmbuilder containers
+	@echo Building el7 rpmbuilder images
 	docker build --pull --tag docker.io/jsosic/rpmbuilder:el7    rpmbuilder:el7
 	docker build --tag docker.io/jsosic/rpmbuilder:el7ius rpmbuilder:el7ius
 
 push_el6:
-	@echo Pushing el6 rpmbuilder containers
+	@echo Pushing el6 rpmbuilder images
 	docker push docker.io/jsosic/rpmbuilder:el6
 	docker push docker.io/jsosic/rpmbuilder:el6ius
 
 push_el7:
-	@echo Pushing el7 rpmbuilder containers
+	@echo Pushing el7 rpmbuilder images
 	docker push docker.io/jsosic/rpmbuilder:el7
 	docker push docker.io/jsosic/rpmbuilder:el7ius
+
+pull:
+	@echo Pulling images
+	docker pull docker.io/jsosic/rpmbuilder:el6
+	docker pull docker.io/jsosic/rpmbuilder:el6ius
+	docker pull docker.io/jsosic/rpmbuilder:el7
+	docker pull docker.io/jsosic/rpmbuilder:el7ius
 
 help:
 	@echo List of all accessible tasks
