--- a/docker/rpmbuilder:el6ius/Dockerfile
+++ b/docker/rpmbuilder:el6ius/Dockerfile
@@ -1,4 +1,4 @@
 FROM jsosic/rpmbuilder:el6
-RUN sudo yum -y install http://dl.iuscommunity.org/pub/ius/stable/CentOS/6/x86_64/ius-release-1.0-14.ius.centos6.noarch.rpm \
+RUN sudo yum -y install https://centos6.iuscommunity.org/ius-release.rpm \
  && sudo yum -y update \
  && sudo yum clean all
