--- a/docker/rpmbuilder:el7ius/Dockerfile
+++ b/docker/rpmbuilder:el7ius/Dockerfile
@@ -1,4 +1,4 @@
 FROM jsosic/rpmbuilder:el7
-RUN sudo yum -y install https://dl.iuscommunity.org/pub/ius/stable/CentOS/7/x86_64/ius-release-1.0-14.ius.centos7.noarch.rpm \
+RUN sudo yum -y install https://centos7.iuscommunity.org/ius-release.rpm \
  && sudo yum -y update \
  && sudo yum clean all
