Change release RPM for IUS repo to generic one

--- a/docker/rpmbuilder:el6ius/Dockerfile
+++ b/docker/rpmbuilder:el6ius/Dockerfile
@@ -1,4 +1,4 @@
 FROM jsosic/rpmbuilder:el6
-RUN sudo yum -y install https://centos6.iuscommunity.org/ius-release.rpm \
+RUN sudo yum -y install https://repo.ius.io/ius-release-el6.rpm \
  && sudo yum -y update \
  && sudo yum clean all
