--- a/docker/rpmbuilder:el7ius/Dockerfile
+++ b/docker/rpmbuilder:el7ius/Dockerfile
@@ -1,4 +1,4 @@
 FROM jsosic/rpmbuilder:el7
-RUN sudo yum -y install https://centos7.iuscommunity.org/ius-release.rpm \
+RUN sudo yum -y install https://repo.ius.io/ius-release-el7.rpm \
  && sudo yum -y update \
  && sudo yum clean all
