--- a/vagrant/centos6/Vagrantfile
+++ b/vagrant/centos6/Vagrantfile
@@ -21,6 +21,8 @@ Vagrant.configure(2) do |config|
 
     # update packages
     config.vm.provision "shell", inline: <<-SHELL
+      sudo sed -i -e 's/^mirrorlist/#mirrorlist/g' -e 's|^#baseurl=http://mirror.centos.org/centos/$releasever/|baseurl=https://vault.centos.org/6.10/|g' /etc/yum.repos.d/CentOS*.repo
+      sudo yum -y install https://archives.fedoraproject.org/pub/archive/epel/6/x86_64/epel-release-6-8.noarch.rpm
       sudo yum update -y
     SHELL
   end
