--- a/vagrant/centos6/Vagrantfile
+++ b/vagrant/centos6/Vagrantfile
@@ -15,7 +15,7 @@ Vagrant.configure(2) do |config|
   # CentOS 6 (default Toptal OS)
   config.vm.define "centos6" do |centos6|
     centos6.vm.box_check_update = false
-    centos6.vm.box              = "centos/6"
+    centos6.vm.box              = "generic/centos6"
     centos6.vm.hostname         = "centos6.heartbeat.lan"
     centos6.vm.network :forwarded_port, guest: 22, host: 10622, id: "ssh"
 
